hphp/test/zend/good/ext/standard/tests/network/udgloop.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (array_search("udg",stream_get_transports()) === false)
    die('SKIP No support for UNIX domain sockets.');
}
