hphp/test/zend/bad/ext/standard/tests/network/udgloop.php.skipif
<?php # vim:ft=php:
	if (array_search("udg",stream_get_transports()) === false)
		die('SKIP No support for UNIX domain sockets.'); 
?>